--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -54,6 +54,74 @@
     "print(height)\n",
     "print(is_student)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b8f620cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "總和是:15\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 5\n",
+    "sum_result = a + b\n",
+    "print(\"總和是:\",sum_result,sep='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4116845e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a ** b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e2799847",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello-World-!-56!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello','World',\"!\",56,sep='-',end='!\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9e3a933",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
