--- a/lesson2/lesson2_5.ipynb
+++ b/lesson2/lesson2_5.ipynb
@@ -97,6 +97,39 @@
     "    total += i\n",
     "print(total)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dd899cc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "計數器:1\n",
+      "計數器:2\n",
+      "計數器:3\n",
+      "計數器:4\n",
+      "計數器:5\n",
+      "計數器:6\n",
+      "計數器:7\n",
+      "計數器:8\n",
+      "計數器:9\n",
+      "計數器:10\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while(True):\n",
+    "    is_play = input(\"您還繼續玩嗎?(y,n)\")\n",
+    "    if is_play == \"n\":\n",
+    "        break\n",
+    "    i += 1\n",
+    "    print(f\"計數器:{i}\")"
+   ]
   }
  ],
  "metadata": {
